--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -244,7 +244,6 @@ h3 {
   @include btn-border-drawing(#64f0f5, #f1c40f, 4px, bottom, right);
 }
 
-//=== Button styling, semi-ignore
 .btn {
   background: none;
   border: none;
@@ -261,4 +260,65 @@ h3 {
   &:focus {
     outline: 2px dotted #55d7dc;
   }
+}
+
+.btn1 {
+  cursor: pointer;
+  position: relative;
+  padding: 10px 20px;
+  background: white;
+  font-size: 28px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  margin: auto;
+  width: 10%;
+  transition: all 1s;
+  &:after,
+  &:before {
+    content: " ";
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    border: 0px solid #fff;
+    transition: all 1s;
+  }
+  &:after {
+    top: -1px;
+    left: -1px;
+    border-top: 5px solid black;
+    border-left: 5px solid black;
+  }
+  &:before {
+    bottom: -1px;
+    right: -1px;
+    border-bottom: 5px solid black;
+    border-right: 5px solid black;
+  }
+  &:hover {
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    // background:rgba(0,0,0,.5);
+    // color:white;
+    &:before,
+    &:after {
+      width: 100%;
+      height: 100%;
+      // border-color:white;
+    }
+  }
+}
+
+.data-container {
+  background: #ffebee;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttonBottomBrowsing {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
 }
