--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -178,6 +178,54 @@ h3 {
   margin-top: 20px;
 }
 
+.tripTiles {
+  width: 60%;
+  margin: auto;
+  justify-content: space-evenly;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 15px;
+}
+
+.tripTiles div {
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+
+.userProfileDiv {
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.userProfileDiv img {
+  width: 100%;
+  height: 500px;
+  border-radius: 0 0 85% 85% / 30%;
+}
+
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Luminari";
+  font-size: 4rem;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+.top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+  font-family: "Luminari";
+  font-size: 4rem;
+  text-shadow: 2px 2px 4px #000000;
+}
+
 @mixin btn-border-drawing(
   $color: #ccc,
   $hover: black,
