Show should be all set

--- a/client/src/assets/scss/foundation/_settings.scss
+++ b/client/src/assets/scss/foundation/_settings.scss
@@ -335,7 +335,13 @@ $button-sizes: (
   default: 0.9rem,
   large: 1.25rem,
 );
-$button-palette: $foundation-palette;
+$button-palette: map-merge(
+  $foundation-palette,
+  (
+    yellow: #f1c40f,
+    red: #be3c54,
+  )
+);
 $button-opacity-disabled: 0.25;
 $button-background-hover-lightness: -20%;
 $button-hollow-hover-lightness: -50%;
