--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -243,89 +243,89 @@ h3 {
   margin: auto;
 }
 
-@mixin btn-border-drawing(
-  $color: #ccc,
-  $hover: black,
-  $width: 2px,
-  $vertical: top,
-  $horizontal: left,
-  $duration: 0.25s
-) {
-  box-shadow: inset 0 0 0 $width $color;
-  color: $color;
-  transition: color $duration $duration/3;
-  position: relative;
+// @mixin btn-border-drawing(
+//   $color: #ccc,
+//   $hover: black,
+//   $width: 2px,
+//   $vertical: top,
+//   $horizontal: left,
+//   $duration: 0.25s
+// ) {
+//   box-shadow: inset 0 0 0 $width $color;
+//   color: $color;
+//   transition: color $duration $duration/3;
+//   position: relative;
 
-  &::before,
-  &::after {
-    border: 0 solid transparent;
-    box-sizing: border-box;
-    content: "";
-    pointer-events: none;
-    position: absolute;
-    width: 0;
-    height: 0;
+//   &::before,
+//   &::after {
+//     border: 0 solid transparent;
+//     box-sizing: border-box;
+//     content: "";
+//     pointer-events: none;
+//     position: absolute;
+//     width: 0;
+//     height: 0;
 
-    #{$vertical}: 0;
-    #{$horizontal}: 0;
-  }
+//     #{$vertical}: 0;
+//     #{$horizontal}: 0;
+//   }
 
-  &::before {
-    $h-side: if($horizontal == "left", "right", "left");
+//   &::before {
+//     $h-side: if($horizontal == "left", "right", "left");
 
-    border-#{$vertical}-width: $width;
-    border-#{$h-side}-width: $width;
-  }
+//     border-#{$vertical}-width: $width;
+//     border-#{$h-side}-width: $width;
+//   }
 
-  &::after {
-    $v-side: if($vertical == "top", "bottom", "top");
+//   &::after {
+//     $v-side: if($vertical == "top", "bottom", "top");
 
-    border-#{$v-side}-width: $width;
-    border-#{$horizontal}-width: $width;
-  }
+//     border-#{$v-side}-width: $width;
+//     border-#{$horizontal}-width: $width;
+//   }
 
-  &:hover {
-    color: $hover;
+//   &:hover {
+//     color: $hover;
 
-    &::before,
-    &::after {
-      border-color: $hover;
-      transition: border-color 0s, width $duration, height $duration;
-      width: 100%;
-      height: 100%;
-    }
+//     &::before,
+//     &::after {
+//       border-color: $hover;
+//       transition: border-color 0s, width $duration, height $duration;
+//       width: 100%;
+//       height: 100%;
+//     }
 
-    &::before {
-      transition-delay: 0s, 0s, $duration;
-    }
+//     &::before {
+//       transition-delay: 0s, 0s, $duration;
+//     }
 
-    &::after {
-      transition-delay: 0s, $duration, 0s;
-    }
-  }
-}
+//     &::after {
+//       transition-delay: 0s, $duration, 0s;
+//     }
+//   }
+// }
 
-.draw-border {
-  @include btn-border-drawing(#64f0f5, #f1c40f, 4px, bottom, right);
-}
+// .draw-border {
+//   @include btn-border-drawing(#64f0f5, #f1c40f, 4px, bottom, right);
+// }
 
-.btn {
-  background: none;
-  border: none;
-  cursor: pointer;
-  line-height: 1.5;
-  font: 700 1.2rem "Roboto Slab", sans-serif;
-  padding: 1em 2em;
-  letter-spacing: 0.05rem;
-  width: 20%;
-  text-shadow: 2px 2px 4px #000000;
-  margin: 20px auto;
-  border-radius: 6px;
+// .btn {
+//   background: none;
+//   border: none;
+//   cursor: pointer;
+//   line-height: 1.5;
+//   font: 700 1.2rem "Roboto Slab", sans-serif;
+//   padding: 1em 2em;
+//   letter-spacing: 0.05rem;
+//   width: 20%;
+//   text-shadow: 2px 2px 4px #000000;
+//   margin: 20px auto;
+//   border-radius: 6px;
 
-  &:focus {
-    outline: 2px dotted #55d7dc;
-  }
-}
+//   &:focus {
+//     outline: 2px dotted #55d7dc;
+//   }
+// }
 
 //get rid of this button
 
