--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -63,8 +63,6 @@ body {
   background-size: cover;
 }
 
-// this is just a test
-
 .top-bar,
 .top-bar ul {
   background-color: #abc0c6;
@@ -327,7 +325,7 @@ h3 {
   }
 }
 
-get rid of this button .btn1 {
+button .btn1 {
   cursor: pointer;
   position: relative;
   padding: 10px 20px;
